--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flud</title>
+    <style>
+        #log {
+            height: 200px;
+            width: 600px;
+            overflow: scroll;
+        }
+    </style>
 </head>
 <body>
-    <main>Touch to play.</main>
+    <canvas id="canvas" width="600" height="600" style="border:solid black 1px;">
+        Your browser does not support canvas element.
+    </canvas>
+    <br>
+    Log: <pre id="log" style="border: 1px solid #ccc;"></pre>
+    <script>
+        function startup() {
+            const el = document.getElementById('canvas');
+            el.addEventListener('touchstart', handleStart);
+            el.addEventListener('touchend', handleEnd);
+            el.addEventListener('touchcancel', handleCancel);
+            el.addEventListener('touchmove', handleMove);
+            log('Initialized.');
+        }
+
+            document.addEventListener("DOMContentLoaded", startup);
+
+    </script>
 </body>
 </html>
