--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         main {
             height: 100%;
-            width: 100%;
+            width: 100vh;
             background-color: moccasin;
         }
     </style>
