change to canvas

--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flud</title>
     <style>
-        main {
-            height: 100%;
-            width: 100vh;
-            background-color: moccasin;
-        }
     </style>
 </head>
 <body>
-    <main id="flud">Touch to play.</main>
+    <canvas id="flud" width="480" height="320"></canvas>
     <script>
         function startup() {
             const el = document.getElementById('flud');
